--- a/src/styles/titulocomprar.css
+++ b/src/styles/titulocomprar.css
@@ -1,7 +1,7 @@
 .titulo__comprar {
-    margin-top: 90px;
+    margin-top: 80px;
     color: wheat;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: x-large;
     text-align: center;
+    width: 100%;
+    height: 0.5%;
 }
